# oc_p10

./: .funcignore  .gitignore  NOTES.md  README.md  RESEARCH.md  TODO.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: azure-func-deploy.yml  prod_recommender.yml
HttpRecommender/: __init__.py  function.json  recommender.py
UploadDataTimer/: __init__.py
notebooks/: 00_analysis.ipynb  01_modeling.ipynb  02_front.ipynb  constants.py  kaggle_notebook_introduction.ipynb  main.ipynb  modeling.ipynb  nb_EDA.ipynb  recommender-systems-in-python-101.ipynb
src/functions/: recommendation_api.py
src/models/: recommender.py
src/utils/: config.py
