[project]
name = "oc-p10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "tqdm>=4.67.1",
]
